// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupMenuItem check disabled 1`] = `
<li
  className="sdc-menu-item disabled"
  onClick={[Function]}
>
  item 2
</li>
`;

exports[`PopupMenuItem check selected 1`] = `
<li
  className="sdc-menu-item selected"
  onClick={[Function]}
>
  item 1
</li>
`;
